--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@
 
     Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Это позволяет минимизировать затраты по памяти, а также уменьшить количество вызовов на отрисовку. Полигонизация текстур позволяет уменьшить количество вызовов фрагментного шейдера, путем минимизации площади пустых пикселей, входящих в меш. Также это позволяет упаковать больше текстур в атлас, т.к. в полигональном виде они занимают меньшую площадь.
 
-    К сожалению, нет открытых программных пакетов или статей, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведение исследований и создания новых алгоритмов.
+    К сожалению, нет открытых программных пакетов или статей, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведения исследований и создания новых алгоритмов.
 
     В разделе "Раз" более подробно описывается проблема, подлежащая решению, дается обзор теоретических положений и практических подходов к решению поставленных задач.
 
@@ -70,27 +70,74 @@
         \caption{2D меш}
     \end{figure}
 
-    Для того, чтобы отрисовать изображение на экране, необходимо пройти через графический конвейер. Обязательными и важнейшими этапами графического конвейера являются исполнение вершинного и фрагментного шейдеров, которые запускаются для каждой вершины и каждого фрагмента (пикселя) соответственно. После вызова фрагментного шейдера полученный цвет фрагмента смешивается с цветом фрагмента в буфере кадра. Многие изображения содержат огромное количество прозрачных пикселей. Вызов фрагментного шейдера для таких пикселей часто является бессмысленным, так как прозрачных пиксель при смешивании никак не повлияет на цвет на экране.
-    Эти размышления приводят к одному из способов оптимизации: создание полигонального меша для изображения таким образом, чтобы минимизировать число вершин и пустых пикселей, занимаемых площадью меша.
-    %МБ ВСТАВИТЬ КАРТИНКУ ГРАФИЧЕСКОГО ПАЙПЛАЙНА%
+    Прежде чем объект попадет на экран, его текстуру и меш необходимо отправить на видеокарту, которые должны пройти этапы графического конвейера Рис. \ref{GraphicsPipeline}.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.8]{images/graphicspipeline.png}
+        \caption{Основные этапы графического конвейера}
+        \label{GraphicsPipeline}
+    \end{figure}
+
+    Сначала для каждой вершины меша запускается вершинный шейдер, в котором вершины подвергаются различным преобразованиям (например, масштабирование или преобразование камеры). Далее необходимо растеризовать треугольник, то есть определить, какие пиксели на экране соответствуют данному треугольнику. Затем для каждого пикселя запускается пиксельный (или фрагментный) шейдер, который должен присвоить пикселю цвет (например, взятый из текстуры). Цвет полученного пикселя смешивается с цветом пикселя на экране. Стандартное уравнение смешивание цвета выглядит следующим образом:
+
+    \[
+        color = alpha \cdot pixelColor + (1 - alpha) \cdot color
+    \]
+
+    Из чего следует, что полностью прозрачные пиксели ($alpha = 0$) никак не влияют на цвет на экране.
+
+    То, как объект попадает на экран, задает параметры качества для 2D меша: он должен состоять из как можно меньшего количества вершин и задевать минимальное количество прозрачных пикселей. Но алгоритма генерации качественного 2D меша или упрощения 2D меша нет.
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}[c]{.49\linewidth}
+            \includegraphics{images/Thunder_approx.png}
+            \caption{Прямоугольный меш с 4 вершинами}
+        \end{subfigure}
+        \begin{subfigure}[c]{.49\linewidth}
+            \includegraphics{images/Thunder_approx.png}
+            \caption{Полигональный меш с 10 вершинами}
+        \end{subfigure}
+    \end{figure}
+
+    В GIS системах возникает схожая задача: необходимо уменьшить количество вершин у кривой, задающей очертание береговой линии. Для этого разработали множество алгоритмов упрощения кривой: алгоритм Ramer–Douglas–Peucker \cite{Ramer}\cite{DouglasPeucker}, алгоритм радиального расстояния \cite{PolylineSimplification}, алгоритм Visvalingam–Whyatt \cite{VisvalingamWhyatt}, упрощение Opheim \cite{Opheim} и Lang \cite{Lang}, алгоритм Zhao–Saalfeld \cite{ZhaoSaalfeld}, алгоритм Reumann-Witkam \cite{ReumannWitkam}.
+
+    Задачу упрощения 2D меша можно свести к задаче упрощения замкнутой кривой или же просто полигона, так как объединение треугольников меша является множеством простых полигонов с дырами. То есть можно без потери общности считать, что меш это -- триангуляция соответствующего ему множеству полигонов. Поэтому здесь и далее под задачей упрощения текстурного 2D меша будет подразумеваться задача упрощения полигонов.
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}[c]{.49\linewidth}
+            \includegraphics{images/Thunder_approx.png}
+            \caption{Картинка с мешем}
+        \end{subfigure}
+        \begin{subfigure}[c]{.49\linewidth}
+            \includegraphics{images/Thunder_approx.png}
+            \caption{Картинка аля меш == полигон}
+        \end{subfigure}
+    \end{figure}
+
+    2D текстурный меш должен быть надмножеством контура изображения. Контур растрового изображения -- это множество последовательностей граничных пикселей. Меш, полученный из контура изображения, содержит в себе наибольшее количество вершин, но при этом не содержит в себе пустых пикселей.
 
     \begin{figure}[H]
         \centering
         \includegraphics{images/Thunder_approx.png}
-        \caption{Полигональный меш с 10 вершинами}
+        \caption{Картинка с контуром}
     \end{figure}
 
-    Для GIS систем разработали множество алгоритмов упрощения кривой: алгоритм Ramer–Douglas–Peucker\cite{Ramer}\cite{DouglasPeucker}, алгоритм радиального расстояния\cite{PolylineSimplification}, алгоритм Visvalingam–Whyatt\cite{VisvalingamWhyatt}, упрощение Opheim\cite{Opheim} и Lang\cite{Lang}, алгоритм Zhao–Saalfeld\cite{ZhaoSaalfeld}, алгоритм Reumann-Witkam\cite{ReumannWitkam}.
+    Полигоны, упрощенные алгоритмом упрощения кривых, могут нарушать свойство, изложенное выше. Также алгоритмы упрощения кривых не рассматривают задачу минимизации добавочной площади (или площади пустых пикселей). Их главным критерием качества является некая похожесть исходной кривой и упрощенной.
 
-    Однако в данной работе задача упрощения полигонов применяется в контексте текстурного меша. Ключевыми отличиями данной прикладной задачи от общей является минимизация не только количества вершин, но и площади прозрачных пикселей (или добавочной площади), а также ограничение, которое не позволяет нарушать границы исходных полигонов (контур изображения). Описанные выше алгоритмы можно адаптировать, чтобы они соответствовали ограничению. К сожалению, данные алгоритмы совсем не рассчитаны на минимизацию добавочной площади, а также часто приходят в тупиковую ситуацию, когда все ещё требует уменьшить количество вершин, но возможных трансформаций не существует. Решение данных проблем привело к созданию алгоритма упрощения множества простых полигонов с дырками.
+    Данная работа предлагает оригинальный алгоритм для упрощения контура изображения, который стремится минимизировать количество вершин и площадь пустых пикселей.
 
     \subsection{Упаковка текстур в атласы}
 
     Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Под­текстуры отображаются на объект, используя UV ­преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. В приложениях нередко используется множество маленьких текстур, причём переключение с одной текстуры на другую является относительно медленным процессом. Поэтому в подобных ситуациях целесообразно применение одного большого изображения вместо множества маленьких. Также текстурные атласы помогают сэкономить память при помощи полигональной упаковки и\textbackslash или алгоритмов сжатия.
 
-    Задача упаковки в контейнеры -- NP-трудная комбинаторная задача. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem, т.е. упаковка полигональных объектов в прямоугольные контейнеры.
+    Задача упаковки в контейнеры -- NP-трудная комбинаторная задача. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem, то есть упаковка полигональных объектов в прямоугольные контейнеры.
 
-    Для упаковки прямоугольных объектов существует множество эвристических алгоритмов\cite{ThousandWayToPackBin}, которые хорошо показывают себя на практике. В области упаковки полигонов существуют различные подходы.
+    Для упаковки прямоугольных объектов существует множество эвристических алгоритмов\cite{ThousandWayToPackBin}, которые хорошо показывают себя на практике.
+
+    В области упаковки полигонов существуют различные подходы.
 
     No-fit polygon\cite{NofitPolygon}\cite{NofitPolygon2} -- это конструкция, которая определяет все положения, которые могут принимать 2 произвольных многоугольника относительно друг друга так, чтобы они соприкасались, но не перекрывались. Часто методы на основе no-fit polygon используют для решения задачи раскроя на производстве, где форма вырезаемых объектов несложная и заранее известна.
 
