--- a/references.bib
+++ b/references.bib
@@ -391,3 +391,39 @@ clipping and offsetting lines and polygons},
   year            = {1985},
   pages           = {557-559},
 }
+
+@inbook{BinPackingIsNPHard,
+    title         = "Bin-Packing",
+    bookTitle     = "Combinatorial Optimization: Theory and Algorithms",
+    year          = "2006",
+    publisher     = "Springer Berlin Heidelberg",
+    address       = "Berlin, Heidelberg",
+    pages         = "426--441",
+    isbn          = "978-3-540-29297-5",
+    doi           = "10.1007/3-540-29297-7_18",
+    url           = "https://doi.org/10.1007/3-540-29297-7_18"
+}
+
+@article{TypologyOfPackingProblems,
+    title         = {An improved typology of cutting and packing problems},
+    journal       = {European Journal of Operational Research},
+    volume        = {183},
+    number        = {3},
+    pages         = {1109-1130},
+    year          = {2007},
+    issn          = {0377-2217},
+    doi           = {https://doi.org/10.1016/j.ejor.2005.12.047},
+    url           = {https://www.sciencedirect.com/science/article/pii/S037722170600292X},
+    author        = {Gerhard Wäscher and Heike Haußner and Holger Schumann},
+    keywords      = {Cutting, Packing, Typology},
+    abstract      = {The number of publications in the area of Cutting and Packing (C&P) has increased considerably over the last two decades. The typology of C&P problems introduced by Dyckhoff [Dyckhoff, H., 1990. A typology of cutting and packing problems. European Journal of Operational Research 44, 145–159] initially provided an excellent instrument for the organisation and categorisation of existing and new literature. However, over the years also some deficiencies of this typology became evident, which created problems in dealing with recent developments and prevented it from being accepted more generally. In this paper, the authors present an improved typology, which is partially based on Dyckhoff’s original ideas, but introduces new categorisation criteria, which define problem categories different from those of Dyckhoff. Furthermore, a new, consistent system of names is suggested for these problem categories. Finally, the practicability of the new scheme is demonstrated by using it as a basis for a categorisation of the C&P literature from the years between 1995 and 2004.}
+}
+
+@article{WhatIsMemetic,
+    author        = {Moscato, Pablo},
+    year          = {2000},
+    month         = {10},
+    pages         = {},
+    title         = {On Evolution, Search, Optimization, Genetic Algorithms and Martial Arts - Towards Memetic Algorithms},
+    journal       = {Caltech Concurrent Computation Program}
+}
