--- a/thesis.tex
+++ b/thesis.tex
@@ -61,7 +61,7 @@
     Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
 
     \subsection{Генерация текстурного меша}
-
+    \label{TextureMeshGeneration}
     Полигональный меш (полигональная сетка) -- это совокупность вершин, рёбер и граней, которые определяют форму многогранного объекта в трёхмерной компьютерной графике и объёмном моделировании. В двумерной компьютерной графике меши используются для вершинной и скелетной анимации.
 
     \begin{figure}[H]
@@ -131,24 +131,32 @@
 
     \subsection{Упаковка текстур в атласы}
 
-    Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Под­текстуры отображаются на объект, используя UV ­преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. В приложениях нередко используется множество маленьких текстур, причём переключение с одной текстуры на другую является относительно медленным процессом. Поэтому в подобных ситуациях целесообразно применение одного большого изображения вместо множества маленьких. Также текстурные атласы помогают сэкономить память при помощи полигональной упаковки и\textbackslash или алгоритмов сжатия.
+    Как было сказано в \ref{TextureMeshGeneration}, прежде чем отрисовать объект на экране, его текстуру и меш необходимо отправить на видеокарту. В компьютерной графике применяют различные подходы, которые позволяют уменьшить количество отправлений данных на GPU. Одним из таких подходов является использование текстурных атласов. Текстурный атлас -- это большое изображение, содержащее набор под-изображений. Под-текстуры отображаются на объект, используя UV-преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. Если текстуры подряд идущих игровых объектов находятся в одном атласе, то при равенстве прочих параметрах отрисовки (например, шейдеры или режим смешивания) эти объекты можно отрисовать разом за один Draw Call.
 
-    Задача упаковки в контейнеры -- NP-трудная комбинаторная задача. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem, то есть упаковка полигональных объектов в прямоугольные контейнеры.
+    \begin{figure}[H]
+        \centering
+        \includegraphics{images/Thunder_approx.png}
+        \caption{Картинка примером Атласа}
+    \end{figure}
 
-    Для упаковки прямоугольных объектов существует множество эвристических алгоритмов\cite{ThousandWayToPackBin}, которые хорошо показывают себя на практике.
+    Для того чтобы уменьшить размер текстур и соответственно ускорить их загрузку на GPU, в компьютерной графике применяют компрессию. Алгоритмы сжатия часто ставят ограничение на размеры текстур. Например, размеры должны быть степенью двойки или даже длина должна совпадать с шириной. В этом случае текстуры, не подходящие под ограничения, необходимо изменить, что плохо сказывается на качестве текстуры или на её размере, поэтому использовании компрессии целесообразно паковать текстуры в атлас.
+
+    Упаковка текстур в атласы это частный случай задачи упаковки в контейнеры -- NP-трудной \cite{BinPackingIsNPHard} комбинаторной задачи. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem \cite{TypologyOfPackingProblems}, то есть упаковки полигональных объектов в прямоугольные контейнеры.
+
+    Для упаковки прямоугольных объектов существует множество эвристических алгоритмов \cite{ThousandWayToPackBin}, которые хорошо показывают себя на практике.
 
     В области упаковки полигонов существуют различные подходы.
 
-    No-fit polygon\cite{NofitPolygon}\cite{NofitPolygon2} -- это конструкция, которая определяет все положения, которые могут принимать 2 произвольных многоугольника относительно друг друга так, чтобы они соприкасались, но не перекрывались. Часто методы на основе no-fit polygon используют для решения задачи раскроя на производстве, где форма вырезаемых объектов несложная и заранее известна.
+    No-fit polygon \cite{NofitPolygon}\cite{NofitPolygon2} -- это конструкция, которая определяет все положения, которые могут принимать два произвольных многоугольника относительно друг друга так, чтобы они соприкасались, но не перекрывались. Подсчет no-fit полигона необходимо производить для каждой вершины полигона и для каждой ориентации полигона, поэтому методы на основе no-fit polygon используют для решения задачи раскроя на производстве, где форма вырезаемых объектов несложная и заранее известна.
 
-    Swarm intelligence (роевой интеллект) -- метод оптимизации, который описывает коллективное поведение децентрализованной самоорганизующейся системы: колонии светлячков\cite{FireFly}, муравьев\cite{AntColony}, пчел\cite{PlayrixArticle}, particle swarm optimization\cite{PSO}.
+    Swarm intelligence (роевой интеллект) -- метод оптимизации, который описывает коллективное поведение децентрализованной самоорганизующейся системы: колонии светлячков \cite{FireFly}, муравьев \cite{AntColony}, пчел \cite{PlayrixArticle}, particle swarm optimization \cite{PSO}.
 
-    Генетический алгоритм\cite{JAKOBS1996165} -- это эвристический алгоритм поиска, используемый для решения задач оптимизации и моделирования путём случайного подбора, комбинирования и вариации искомых параметров с использованием механизмов, аналогичных естественному отбору в природе.
+    Генетический алгоритм \cite{JAKOBS1996165} -- это эвристический алгоритм поиска, используемый для решения задач оптимизации и моделирования путём случайного подбора, комбинирования и вариации искомых параметров с использованием механизмов, аналогичных естественному отбору в природе.
 
-    К сожалению, результаты прочитанных статей не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает собственную реализацию Memetic algorithm -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения, на которых находятся множество разрозненных объектов с дырами.
+   Существующие алгоритмы не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает оригинальную реализацию Memetic algorithm \cite{WhatIsMemetic} -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения со свободным поворотом, на которых находятся множество разрозненных объектов с дырами.
 
     \section{Алгоритмы, структуры данных и математические методы}
-    \subsection{Пайплайн полигональной упаковки}
+    \subsection{Этапы полигональной упаковки}
     \begin{itemize}
         \item Трассировка контура изображений;
         \item Аппроксимация полученных контуров;
@@ -157,7 +165,7 @@
     \subsection{Трассировка контура}
     Алгоритмы выделения контура можно разделить на 3 типа: обход попиксельно, обход повершинно, run-data.
     \subsubsection{Обход попиксельно}
-    Метод выделения контура обходом попиксельно начинает с какого-либо стартового пикселя и пиксель за пикселем обходит контур изображения предопределенным образом, а затем сохраняет их координаты в памяти в соответствии с порядком трассировки. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing\cite{MoorNeighbor}, radial sweep\cite{RadialSweep} и алгоритм Theo Pavlidis\cite{TheoPavlidis}.
+    Метод выделения контура обходом попиксельно начинает с какого-либо стартового пикселя и пиксель за пикселем обходит контур изображения предопределенным образом, а затем сохраняет их координаты в памяти в соответствии с порядком трассировки. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing \cite{MoorNeighbor}, radial sweep \cite{RadialSweep} и алгоритм Theo Pavlidis \cite{TheoPavlidis}.
     \subsubsection{Обход повершинно}
     Метод выделения контура обходом повершинно отличается от обхода попиксельно лишь тем, что обход осуществляется по границам пикселя.
     \subsubsection{Run-data}
